# treesitter-poryscript

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  TODO.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-poryscript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_poryscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPoryscript/: poryscript.h
bindings/swift/TreeSitterPoryscriptTests/: TreeSitterPoryscriptTests.swift
ftdetect/: poryscript.lua
plugin/: init.lua
queries/poryscript/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comment.pory
